badminton page created

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    color: white;
-    background-image: url('images/bgImg.jpg');
+    color: rgb(184, 118, 118);
+    background-image: url('images/bgimg\ \(2\).jpg');
     background-blend-mode: lighten;
     background-repeat: no-repeat;
     background-size: cover;
